Add initial HTML files for Categories, Home, and Members

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
         <a href="#" class="logo">DE_FORUMS</a>
         <nav class="nav-bar">
             <div class="nav-links">
-                <a href="#" class="nav-link">Home</a>
-                <a href="#" class="nav-link">Categories</a>
-                <a href="#" class="nav-link">Members</a>
+                <a href="Home.html" class="nav-link">Home</a>
+                <a href="Categories.html" class="nav-link">Categories</a>
+                <a href="Members.html" class="nav-link">Members</a>
             </div>
             <a class="nav-link login-link" onclick="togglePopup('loginPopup'); closePopup('registerPopup');">Login</a>
         </nav>
