--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DE_FORUMS</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Link to external CSS file -->
+    <link rel="stylesheet" href="style/styles.css"> <!-- Link to external CSS file -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script>
         function togglePopup(id) {
@@ -34,9 +34,9 @@
         <a href="#" class="logo">DE_FORUMS</a>
         <nav class="nav-bar">
             <div class="nav-links">
-                <a href="Home.html" class="nav-link">Home</a>
-                <a href="Categories.html" class="nav-link">Categories</a>
-                <a href="Members.html" class="nav-link">Members</a>
+                <a href="html/Home.html" class="nav-link">Home</a>
+                <a href="html/Categories.html" class="nav-link">Categories</a>
+                <a href="html/Members.html" class="nav-link">Members</a>
             </div>
             <a class="nav-link login-link" onclick="togglePopup('loginPopup'); closePopup('registerPopup');">Login</a>
         </nav>
