--- a/index.html
+++ b/index.html
@@ -26,6 +26,15 @@
             });
             closePopup('loginPopup'); // Đóng popup sau khi thông báo
         }
+
+        function loadContent(page) {
+            fetch(page)
+                .then(response => response.text())
+                .then(data => {
+                    document.getElementById('content').innerHTML = data;
+                })
+                .catch(error => console.error('Error loading content:', error));
+        }
     </script>
 </head>
 <body>
@@ -34,14 +43,18 @@
         <a href="#" class="logo">DE_FORUMS</a>
         <nav class="nav-bar">
             <div class="nav-links">
-                <a href="Home.html" class="nav-link">Home</a>
-                <a href="Categories.html" class="nav-link">Categories</a>
-                <a href="Members.html" class="nav-link">Members</a>
+                <a href="#" class="nav-link" onclick="loadContent('Home.html')">Home</a>
+                <a href="#" class="nav-link" onclick="loadContent('Categories.html')">Categories</a>
+                <a href="#" class="nav-link" onclick="loadContent('Members.html')">Members</a>
             </div>
             <a class="nav-link login-link" onclick="togglePopup('loginPopup'); closePopup('registerPopup');">Login</a>
         </nav>
     </div>
 </header>
+
+<div id="content">
+    <!-- Content will be loaded here -->
+</div>
 
 <div class="popup" id="loginPopup">
     <form onsubmit="handleLogin(); return false;">
