--- a/Categories.html
+++ b/Categories.html
@@ -7,25 +7,39 @@
     <link rel="stylesheet" href="style/styles.css">
 </head>
 <body>
-    <header>
-        <h1>Forum Categories</h1>
-    </header>
-    <main>
-        <section>
-            <h2>Category 1</h2>
-            <p>Description of Category 1.</p>
-        </section>
-        <section>
-            <h2>Category 2</h2>
-            <p>Description of Category 2.</p>
-        </section>
-        <section>
-            <h2>Category 3</h2>
-            <p>Description of Category 3.</p>
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2023 ForumPC. All rights reserved.</p>
-    </footer>
+<header>
+    <h1>Forum Categories</h1>
+</header>
+<main>
+    <section class="categories-page">
+        <div class="category-box">
+            <h2>General</h2>
+            <p>Discussion about general topics.</p>
+        </div>
+        <div class="category-box">
+            <h2>Shooters</h2>
+            <p>Discussion about shooter games.</p>
+        </div>
+        <div class="category-box">
+            <h2>RPG</h2>
+            <p>Discussion about role-playing games.</p>
+        </div>
+        <div class="category-box">
+            <h2>Strategy & Simulation</h2>
+            <p>Discussion about strategy and simulation games.</p>
+        </div>
+        <div class="category-box">
+            <h2>Retro Gaming</h2>
+            <p>Discussion about retro games.</p>
+        </div>
+        <div class="category-box">
+            <h2>Trouble Shooting</h2>
+            <p>Discussion about troubleshooting game issues.</p>
+        </div>
+    </section>
+</main>
+<footer>
+    <p>&copy; 2023 ForumPC. All rights reserved.</p>
+</footer>
 </body>
 </html>
