--- a/Home.html
+++ b/Home.html
@@ -4,43 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Forum - The Game</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 0;
-        }
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 10px 0;
-            text-align: center;
-        }
-        main {
-            padding: 20px;
-        }
-        footer {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 10px 0;
-            position: fixed;
-            width: 100%;
-            bottom: 0;
-        }
-    </style>
+    <link rel="stylesheet" href="style/styles.css">
 </head>
 <body>
-    <header>
-        <h1>Home Forum - The Game</h1>
-    </header>
-    <main>
-        <h2>Welcome to the Home Forum</h2>
-        <p>This is a place where gamers can discuss their favorite games, share tips and tricks, and connect with other gaming enthusiasts.</p>
-    </main>
-    <footer>
-        <p>&copy; 2023 Home Forum. All rights reserved.</p>
-    </footer>
+<header>
+    <h1>Home Forum - The Game</h1>
+</header>
+<main>
+    <section class="newest-updates">
+        <h2>Newest Forums Update</h2>
+        <ul>
+            <li>Update 1: New features added to the forum.</li>
+            <li>Update 2: Improved user interface.</li>
+            <li>Update 3: Bug fixes and performance improvements.</li>
+        </ul>
+    </section>
+    <section class="newest-posts">
+        <h2>Newest Posts</h2>
+        <ul>
+            <li>Post 1: Discussion about the latest game release.</li>
+            <li>Post 2: Tips and tricks for advanced players.</li>
+            <li>Post 3: Community event announcement.</li>
+        </ul>
+    </section>
+</main>
+<footer>
+    <p>&copy; 2023 Home Forum. All rights reserved.</p>
+</footer>
 </body>
 </html>
