--- a/Categories.html
+++ b/Categories.html
@@ -14,27 +14,23 @@
     <section class="categories-page">
         <div class="category-box">
             <h2>General</h2>
-            <p>Discussion about general topics.</p>
+            <p></p>
         </div>
         <div class="category-box">
-            <h2>Shooters</h2>
-            <p>Discussion about shooter games.</p>
+            <h2>Computers</h2>
+            <p></p>
         </div>
         <div class="category-box">
-            <h2>RPG</h2>
-            <p>Discussion about role-playing games.</p>
+            <h2>Softwares and Games</h2>
+            <p></p>
         </div>
         <div class="category-box">
-            <h2>Strategy & Simulation</h2>
-            <p>Discussion about strategy and simulation games.</p>
-        </div>
-        <div class="category-box">
-            <h2>Retro Gaming</h2>
-            <p>Discussion about retro games.</p>
+            <h2>Hardware</h2>
+            <p></p>
         </div>
         <div class="category-box">
             <h2>Trouble Shooting</h2>
-            <p>Discussion about troubleshooting game issues.</p>
+            <p></p>
         </div>
     </section>
 </main>
