--- a/index.html
+++ b/index.html
@@ -6,36 +6,7 @@
     <title>DE_FORUMS</title>
     <link rel="stylesheet" href="style/styles.css"> <!-- Link to external CSS file -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script>
-        function togglePopup(id) {
-            document.getElementById(id).style.display = 'block';
-            document.body.style.overflow = 'hidden'; // Ngăn cuộn trang
-        }
-        function closePopup(id) {
-            document.getElementById(id).style.display = 'none';
-            document.body.style.overflow = 'auto'; // Cho phép cuộn trang
-        }
-
-        function handleLogin() {
-            // Hiển thị thông báo đăng nhập thành công
-            Swal.fire({
-                title: 'Đăng nhập thành công!',
-                text: 'Chào mừng bạn đến với DE_FORUMS!',
-                icon: 'success',
-                confirmButtonText: 'OK'
-            });
-            closePopup('loginPopup'); // Đóng popup sau khi thông báo
-        }
-
-        function loadContent(page) {
-            fetch(page)
-                .then(response => response.text())
-                .then(data => {
-                    document.getElementById('content').innerHTML = data;
-                })
-                .catch(error => console.error('Error loading content:', error));
-        }
-    </script>
+    <script src="script.js" defer></script> <!-- Link to external JS file -->
 </head>
 <body>
 <header class="header">
