--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script>
         function togglePopup(id) {
-            document.getElementById(id).style.display = 'block';
-            document.body.style.overflow = 'hidden';
+            const popup = document.getElementById(id);
+            popup.style.display = popup.style.display === 'block' ? 'none' : 'block';
+            document.body.style.overflow = popup.style.display === 'block' ? 'hidden' : 'auto';
         }
 
         function closePopup(id) {
@@ -18,10 +19,38 @@
         }
 
         async function handleLogin() {
-            // ... (Your login logic)
+            const email = document.getElementById('login-email').value;
+            const password = document.getElementById('login-password').value;
+
+            try {
+                const response = await fetch('https://localhost:7125/api/RegisteredUser/Login', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ email: email, password: password })
+                });
+
+                if (!response.ok) {
+                    Swal.fire({ title: 'Login Failed', text: 'Invalid credentials.', icon: 'error' });
+                    return;
+                }
+
+                const data = await response.json();
+                if (data.isAuthenticated) {
+                    sessionStorage.setItem('isAuthenticated', 'true');
+                    sessionStorage.setItem('username', data.username);
+                    updateNavBar();
+                    showContent('home.html'); 
+                    closePopup('loginPopup');
+                } else {
+                    Swal.fire({ title: 'Login Failed', text: 'Invalid credentials.', icon: 'error' });
+                }
+            } catch (error) {
+                console.error('Fetch error:', error);
+                Swal.fire({ title: 'Network Error', text: 'A network error occurred.', icon: 'error' });
+            }
         }
 
-        async function handleRegister() { // New function for registration
+        async function handleRegister() {
             const username = document.getElementById('register-username').value;
             const email = document.getElementById('register-email').value;
             const password = document.getElementById('register-password').value;
@@ -29,9 +58,7 @@
             try {
                 const response = await fetch('https://localhost:7125/api/RegisteredUser/Insert', {
                     method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json'
-                    },
+                    headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({
                         username: username,
                         email: email,
@@ -41,72 +68,81 @@
                 });
 
                 if (!response.ok) {
-                    const errorText = await response.text();
-                    console.error('Registration failed:', response.status, errorText);
-
-                    try {
-                        const errorData = JSON.parse(errorText);
-                        if (errorData.errors) {
-                            let errorMessage = "";
-                            for (const key in errorData.errors) {
-                                errorMessage += errorData.errors[key].join("\n") + "\n";
-                            }
-                            Swal.fire({  // Use SweetAlert for errors
-                                title: 'Registration Failed',
-                                text: errorMessage,
-                                icon: 'error'
-                            });
-                        } else if (errorData.title) {
-                            Swal.fire({
-                                title: 'Registration Failed',
-                                text: errorData.title,
-                                icon: 'error'
-                            });
-                        } else {
-                            Swal.fire({
-                                title: 'Registration Failed',
-                                text: errorText,
-                                icon: 'error'
-                            });
-                        }
-                    } catch (parseError) {
-                        Swal.fire({
-                            title: 'Registration Failed',
-                            text: errorText,
-                            icon: 'error'
-                        });
-                        console.error("Error parsing error response:", parseError);
-                    }
+                    Swal.fire({ title: 'Registration Failed', text: 'An error occurred.', icon: 'error' });
                     return;
                 }
 
-                const data = await response.json();
-                console.log('Registered:', data);
-                Swal.fire({  // Success message with SweetAlert
-                    title: 'Registration Successful!',
-                    text: 'You have successfully registered.',
-                    icon: 'success'
-                }).then(() => {
-                    closePopup('registerPopup'); // Close popup after successful registration
-                });
-                document.getElementById('register-username').value = '';
-                document.getElementById('register-email').value = '';
-                document.getElementById('register-password').value = '';
-
+                Swal.fire({ title: 'Success!', text: 'You have registered.', icon: 'success' })
+                    .then(() => closePopup('registerPopup'));
             } catch (error) {
-                console.error('Fetch error:', error);
-                Swal.fire({
-                    title: 'Network Error',
-                    text: 'A network error occurred.',
-                    icon: 'error'
-                });
+                Swal.fire({ title: 'Network Error', text: 'A network error occurred.', icon: 'error' });
             }
         }
 
+        function updateNavBar() {
+            let isAuthenticated = sessionStorage.getItem('isAuthenticated');
+            let username = sessionStorage.getItem('username');
 
-        function loadContent(page) {
-            // ... (Your existing loadContent function)
+            const loginLink = document.querySelector('.login-link');
+            const logoutLink = document.querySelector('.logout-link');
+            const usernameDisplay = document.querySelector('.username-display');
+
+            if (isAuthenticated === 'true') {
+                loginLink.style.display = 'none';
+                logoutLink.style.display = 'block';
+                usernameDisplay.textContent = username;
+                usernameDisplay.style.display = 'block';
+            } else {
+                loginLink.style.display = 'block';
+                logoutLink.style.display = 'none';
+                usernameDisplay.style.display = 'none';
+            }
         }
+
+        function showContent(page) {
+            const contentDivs = document.querySelectorAll('.content-section');
+            contentDivs.forEach(div => div.style.display = 'none');
+
+            const targetDivId = page.replace('.html', '-content');
+            let targetDiv = document.getElementById(targetDivId);
+
+            if (targetDiv) {
+                targetDiv.style.display = 'block';
+            } else {
+                fetch(page)
+                    .then(response => response.text())
+                    .then(html => {
+                        const newDiv = document.createElement('div');
+                        newDiv.id = targetDivId;
+                        newDiv.classList.add('content-section');
+                        newDiv.innerHTML = html;
+                        document.getElementById('content').appendChild(newDiv);
+                        newDiv.style.display = 'block';
+                    })
+                    .catch(error => {
+                        Swal.fire({ title: 'Error', text: 'Failed to load content.', icon: 'error' });
+                    });
+            }
+        }
+
+        function logout() {
+            sessionStorage.removeItem('isAuthenticated');
+            sessionStorage.removeItem('username');
+            updateNavBar();
+            showContent('home.html');
+        }
+
+        document.addEventListener('DOMContentLoaded', function() {
+            updateNavBar();
+            showContent('home.html'); 
+
+            document.querySelectorAll('.nav-bar .nav-link').forEach(link => {
+                link.addEventListener('click', function(event) {
+                    event.preventDefault();
+                    showContent(this.getAttribute('href'));
+                });
+            });
+        });
     </script>
 </head>
 <body>
@@ -115,34 +151,35 @@
             <a href="#" class="logo">DE_FORUMS</a>
             <nav class="nav-bar">
                 <div class="nav-links">
-                    <a href="#" class="nav-link" onclick="loadContent('Home.html')">Home</a>
-                    <a href="#" class="nav-link" onclick="loadContent('Categories.html')">Categories</a>
-                    <a href="#" class="nav-link" onclick="loadContent('Members.html')">Members</a>
+                    <a href="home.html" class="nav-link">Home</a>
+                    <a href="categories.html" class="nav-link">Categories</a>
+                    <a href="members.html" class="nav-link">Members</a>
                 </div>
+                <span class="username-display" style="display: none;"></span> 
                 <a class="nav-link login-link" onclick="togglePopup('loginPopup'); closePopup('registerPopup');">Login</a>
+                <a class="nav-link logout-link" onclick="logout();" style="display: none;">Logout</a>
             </nav>
         </div>
     </header>
 
-    <div id="content">
-        </div>
+    <div id="content"></div>
 
     <div class="popup" id="loginPopup">
         <form onsubmit="handleLogin(); return false;">
             <h2>Login</h2>
-            <input type="text" placeholder="Username" required>
-            <input type="password" placeholder="Password" required>
+            <input type="email" id="login-email" placeholder="Email" required>
+            <input type="password" id="login-password" placeholder="Password" required>
             <button type="submit">Login</button>
-            <p class="register-link" onclick="togglePopup('registerPopup'); closePopup('loginPopup');">Doesn't have an account? Create one.</p>
+            <p class="register-link" onclick="togglePopup('registerPopup'); closePopup('loginPopup');">No account? Register here.</p>
         </form>
     </div>
 
     <div class="popup" id="registerPopup">
-        <form onsubmit="handleRegister(); return false;">  <h2>Register</h2>
+        <form onsubmit="handleRegister(); return false;">
+            <h2>Register</h2>
             <input type="text" id="register-username" placeholder="Username" required>
             <input type="email" id="register-email" placeholder="Enter Email" required>
             <input type="password" id="register-password" placeholder="Password" required>
-            <input type="password" placeholder="Re-enter password" required>
             <button type="submit">Register</button>
         </form>
     </div>
