--- a/forums.html
+++ b/forums.html
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital@1&display=swap" rel="stylesheet">
 </head>
 <!-- Login Popup -->
 <div id="login-popup" class="popup hide">
     <div class="popup-content">
-        <span class="close-icon" onclick="closePopup('login-popup')">&times;</span>
+        <span class="close-icon" style="float: right;" onclick="closePopup('login-popup')">&times;</span>
         <h2>Login</h2>
         <input type="text" placeholder="Username" id="login-username">
         <input type="password" placeholder="Password" id="login-password">
