--- a/forums.html
+++ b/forums.html
@@ -11,47 +11,49 @@
     <script src="main.js" defer></script>
 </head>
 <body>
-
     <!-- Login Popup -->
-    <div id="login-popup" class="popup hide">
-        <div class="popup-content">
-            <span class="close-icon" onclick="closePopup('login-popup')">&times;</span>
-            <h2>Login</h2>
-            <input type="email" placeholder="Email" id="login-email">
-            <input type="password" placeholder="Password" id="login-password">
-            <button onclick="login()">Login</button>
-            <p>Don't have an account? <a href="#" onclick="switchToRegister()">Register</a></p>
-        </div>
+<div id="login-popup" class="popup hide">
+    <div class="popup-content">
+        <span class="close-icon" onclick="closePopup('login-popup')">&times;</span>
+        <h2>Login</h2>
+        <input type="email" placeholder="Email" id="login-email">
+        <input type="password" placeholder="Password" id="login-password">
+        <button onclick="login()">Login</button>
+        <p>Don't have an account? <a href="#" onclick="switchToRegister()">Register</a></p>
     </div>
+</div>
 
-    <!-- Register Popup -->
-    <div id="register-popup" class="popup hide">
-        <div class="popup-content">
-            <span class="close-icon" onclick="closePopup('register-popup')">&times;</span>
-            <h2>Register</h2>
-            <input type="text" placeholder="Username" id="register-username">
-            <input type="email" placeholder="Email" id="register-email">
-            <input type="password" placeholder="Password" id="register-password">
-            <input type="password" placeholder="Confirm Password" id="register-password2">
-            <button onclick="register()">Register</button>
-        </div>
+<!-- Register Popup -->
+<div id="register-popup" class="popup hide">
+    <div class="popup-content">
+        <span class="close-icon" onclick="closePopup('register-popup')">&times;</span>
+        <h2>Register</h2>
+        <input type="text" placeholder="Username" id="register-username">
+        <input type="email" placeholder="Email" id="register-email">
+        <input type="password" placeholder="Password" id="register-password">
+        <input type="password" placeholder="Confirm Password" id="register-password2">
+        <button onclick="register()">Register</button>
     </div>
-
+</div>
     <header>
         <div class="navbar">
             <nav class="navigation" id="navigation">
-                <span class="close-icon" id="close-icon" onclick="showIconBar()"><i class="fa fa-close"></i></span>
+                <span class="close-icon" id="close-icon" onclick="showIconBar()">
+                    <i class="fa fa-close"></i>
+                </span>
                 <ul class="nav-list">
                     <li class="nav-item"><a href="forums.html">Forums</a></li>
                     <li class="nav-item"><a href="posts.html">Posts</a></li>
                     <li class="nav-item"><a href="detail.html">Detail</a></li>
-                    <li class="nav-item login-link" id="auth-link"><a href="#" onclick="showLogin()">Login</a></li>
-                    <li class="nav-item logout-link hide" onclick="logout()"><a href="#">Logout</a></li>
-                </ul>                
+                    <li class="nav-item"><a href="categories.html">Categories</a></li>
+                    <li class="nav-item login-link"><a href="#" onclick="showLogin()">Login</a></li>
+                    <li class="nav-item logout-link hide"><a href="#" onclick="logout()">Logout</a></li>
+                </ul>
             </nav>
             <a class="bar-icon" id="iconBar" onclick="hideIconBar()"><i class="fa fa-bars"></i></a>
             <div class="brand">My Forum</div>
             <div id="top-right-username" class="top-right-username hide"></div>
+            
         </div>
 
         <div class="search-box">
