--- a/categories.html
+++ b/categories.html
@@ -78,5 +78,8 @@
             <li>Sports</li>
         </ul>
     </main>
+    <footer>
+        <span>&copy; 2025 My Forum | All Rights Reserved</span>
+    </footer>
 </body>
 </html>
