--- a/detail.html
+++ b/detail.html
@@ -176,7 +176,7 @@
 
     </div>
     <footer>
-        <span>&copy;  Selmi Abderrahim | All Rights Reserved</span>
+        <span>&copy;  My Forums | All Rights Reserved</span>
     </footer>
     <script src="main.js"></script>
 </body>
