--- a/posts.html
+++ b/posts.html
@@ -82,7 +82,10 @@
             <textarea id="thread-content" placeholder="Enter thread content..."></textarea>
             <button onclick="submitThread()">Submit Thread</button>
             <button onclick="closeThreadBox()">Cancel</button>
+        </div>
     </div>
+    <!-- Display Threads -->
+    <div id="thread-list"></div>
 </div>
 
     </div>        
