--- a/detail.html
+++ b/detail.html
@@ -49,6 +49,7 @@
                     <li class="nav-item"><a href="posts.html">Posts</a></li>
                     <li class="nav-item"><a href="detail.html">Detail</a></li>
                     <li class="nav-item"><a href="categories.html">Categories</a></li>
+                    <li class="nav-item"><a href="ModCtrl.html">ModCtrl</a></li>
                     <li class="nav-item login-link"><a href="#" onclick="showLogin()">Login</a></li>
                     <li class="nav-item logout-link hide"><a href="#" onclick="logout()">Logout</a></li>
                 </ul>
