--- a/categories.html
+++ b/categories.html
@@ -14,7 +14,7 @@
 
     <!--NavBar Section-->
     <div class="navbar">
-        <nav class="navigation" id="navigation">
+        <nav class="navigation hide" id="navigation">
             <span class="close-icon" id="close-icon" onclick="showIconBar()">
                 <i class="fa fa-close"></i>
             </span>
