--- a/forums.html
+++ b/forums.html
@@ -37,7 +37,7 @@
 </div>
     <header>
         <div class="navbar">
-            <nav class="navigation" id="navigation">
+            <nav class="navigation hide" id="navigation">
                 <span class="close-icon" id="close-icon" onclick="showIconBar()">
                     <i class="fa fa-close"></i>
                 </span>
