--- a/posts.html
+++ b/posts.html
@@ -40,7 +40,7 @@
     <header>
         <!--NavBar Section-->
         <div class="navbar">
-            <nav class="navigation" id="navigation">
+            <nav class="navigation hide" id="navigation">
                 <span class="close-icon" id="close-icon" onclick="showIconBar()">
                     <i class="fa fa-close"></i>
                 </span>
