--- a/Modctrl.html
+++ b/Modctrl.html
@@ -11,30 +11,6 @@
     <script src="main.js" defer></script>
 </head>
 <body>
-    <!-- Login Popup -->
-    <div id="login-popup" class="popup hide">
-        <div class="popup-content">
-            <span class="close-icon" onclick="closePopup('login-popup')">&times;</span>
-            <h2>Login</h2>
-            <input type="email" placeholder="Email" id="login-email">
-            <input type="password" placeholder="Password" id="login-password">
-            <button onclick="login()">Login</button>
-            <p>Don't have an account? <a href="#" onclick="switchToRegister()">Register</a></p>
-        </div>
-    </div>
-
-    <!-- Register Popup -->
-    <div id="register-popup" class="popup hide">
-        <div class="popup-content">
-            <span class="close-icon" onclick="closePopup('register-popup')">&times;</span>
-            <h2>Register</h2>
-            <input type="text" placeholder="Username" id="register-username">
-            <input type="email" placeholder="Email" id="register-email">
-            <input type="password" placeholder="Password" id="register-password">
-            <input type="password" placeholder="Confirm Password" id="register-password2">
-            <button onclick="register()">Register</button>
-        </div>
-    </div>
     <header>
         <div class="navbar">
             <nav class="navigation hide" id="navigation">
@@ -46,7 +22,7 @@
                     <li class="nav-item"><a href="categories.html">Categories</a></li>
                     <li class="nav-item"><a href="community.html">Community</a></li>
                     <li class="nav-item hide"><a href="Modctrl.html">Modctrl</a></li>
-                    <li class="nav-item login-link"><a href="#" onclick="showLogin()">Login</a></li>
+                    <li class="nav-item"><a href="login.html">Login</a></li>
                     <li class="nav-item logout-link hide"><a href="#" onclick="logout()">Logout</a></li>
                 </ul>
             </nav>
@@ -56,21 +32,38 @@
         </div>
     </header>
     <section>
-        <h2>Moderators & Users</h2>
-        <table border="1">
-            <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>Username</th>
-                    <th>Email</th>
-                    <th>Role</th>
-                    <th>Status</th>
-                </tr>
-            </thead>
-            <tbody id="user-table-body">
-                <!-- Data will be populated here -->
-            </tbody>
-        </table>
+        <h2>User Management</h2>
+        <div class="filter-buttons">
+            <button onclick="filterUsers('all')" class="filter-btn active">All Users</button>
+            <button onclick="filterUsers('Admin')" class="filter-btn">Admins</button>
+            <button onclick="filterUsers('Moderator')" class="filter-btn">Moderators</button>
+            <button onclick="filterUsers('User')" class="filter-btn">Users</button>
+        </div>
+        <div class="table-container">
+            <table class="user-table">
+                <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Username</th>
+                        <th>Email</th>
+                        <th>Role</th>
+                        <th>Status</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tbody id="user-table-body">
+                    <!-- Data will be populated here -->
+                </tbody>
+            </table>
+            <div class="table-actions">
+                <button onclick="saveAllChanges()" class="save-all-btn">
+                    <i class="fa fa-save"></i> Save All Changes
+                </button>
+                <button onclick="refreshTable()" class="refresh-btn">
+                    <i class="fa fa-refresh"></i> Refresh Table
+                </button>
+            </div>
+        </div>
     </section>    
 
     <footer>
